[package]
name = "arduino-controlled-blink"
version = "0.1.0"
authors = ["Prince Wilson <maxcell.wilson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "d17a441a667dd65e5a9be75b0e71d1beadf93e84"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"